/*
 * Copyright 2010 James Pether Sörling
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 *	$Id$
 *  $HeadURL$
*/
// This file was generated by the JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v2.2.11 
// See <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> 
// Any modifications to this file will be lost upon recompilation of the source schema. 
// Generated on: 2019.02.24 at 11:39:45 PM CET 
//


package com.hack23.cia.model.external.worldbank.topic.impl;

import javax.persistence.Basic;
import javax.persistence.Column;
import javax.persistence.Entity;
import javax.persistence.GeneratedValue;
import javax.persistence.GenerationType;
import javax.persistence.Id;
import javax.persistence.Inheritance;
import javax.persistence.InheritanceType;
import javax.persistence.Table;
import javax.xml.bind.annotation.XmlAccessType;
import javax.xml.bind.annotation.XmlAccessorType;
import javax.xml.bind.annotation.XmlAttribute;
import javax.xml.bind.annotation.XmlElement;
import javax.xml.bind.annotation.XmlType;

import org.apache.commons.lang3.builder.EqualsBuilder;
import org.apache.commons.lang3.builder.HashCodeBuilder;
import org.apache.commons.lang3.builder.ToStringBuilder;
import org.apache.commons.lang3.builder.ToStringStyle;

import com.hack23.cia.model.common.api.ModelObject;


/**
 * The Class TopicElement.
 */
@XmlAccessorType(XmlAccessType.FIELD)
@XmlType(name = "TopicElement", propOrder = {
    "sourceNote",
    "topicValue"
})
@Entity(name = "TopicElement")
@Table(name = "TOPIC_ELEMENT")
@Inheritance(strategy = InheritanceType.JOINED)
public class TopicElement
    implements ModelObject
{

    /**
	 * 
	 */
	private static final long serialVersionUID = 1L;

	/** The source note. */
    @XmlElement(required = true)
    protected String sourceNote;
    
    /** The topic value. */
    @XmlElement(name = "value", required = true)
    protected String topicValue;
    
    /** The id. */
    @XmlAttribute(name = "id", required = true)
    protected String id;
    
    /** The hjid. */
    @XmlAttribute(name = "Hjid")
    protected Long hjid;

    /**
	 * Gets the source note.
	 *
	 * @return the source note
	 */
    @Basic
    @Column(name = "SOURCE_NOTE", length = 65536)
    public String getSourceNote() {
        return sourceNote;
    }

    /**
	 * Sets the source note.
	 *
	 * @param value the new source note
	 */
    public void setSourceNote(final String value) {
        this.sourceNote = value;
    }

    /**
	 * Gets the topic value.
	 *
	 * @return the topic value
	 */
    @Basic
    @Column(name = "TOPIC_VALUE", length = 65536)
    public String getTopicValue() {
        return topicValue;
    }

    /**
	 * Sets the topic value.
	 *
	 * @param value the new topic value
	 */
    public void setTopicValue(final String value) {
        this.topicValue = value;
    }

    /**
	 * Gets the id.
	 *
	 * @return the id
	 */
    @Basic
    @Column(name = "ID")
    public String getId() {
        return id;
    }

    /**
	 * Sets the id.
	 *
	 * @param value the new id
	 */
    public void setId(final String value) {
        this.id = value;
    }

    /**
	 * With source note.
	 *
	 * @param value the value
	 * @return the topic element
	 */
    public TopicElement withSourceNote(final String value) {
        setSourceNote(value);
        return this;
    }

    /**
	 * With topic value.
	 *
	 * @param value the value
	 * @return the topic element
	 */
    public TopicElement withTopicValue(final String value) {
        setTopicValue(value);
        return this;
    }

    /**
	 * With id.
	 *
	 * @param value the value
	 * @return the topic element
	 */
    public TopicElement withId(final String value) {
        setId(value);
        return this;
    }

	/* (non-Javadoc)
	 * @see java.lang.Object#toString()
	 */
	@Override
	public final String toString() {
		return ToStringBuilder.reflectionToString(this, ToStringStyle.SHORT_PREFIX_STYLE);
	}

    /**
	 * Gets the hjid.
	 *
	 * @return the hjid
	 */
    @Id
    @Column(name = "HJID")
    @GeneratedValue(strategy = GenerationType.AUTO)
    public Long getHjid() {
        return hjid;
    }

    /**
	 * Sets the hjid.
	 *
	 * @param value the new hjid
	 */
    public void setHjid(final Long value) {
        this.hjid = value;
    }


    /* (non-Javadoc)
     * @see java.lang.Object#equals(java.lang.Object)
     */
    public boolean equals(final Object object) {
    	return EqualsBuilder.reflectionEquals(this,object,"hjid");
    }

	/* (non-Javadoc)
	 * @see java.lang.Object#hashCode()
	 */
	@Override
	public final int hashCode() {
		return HashCodeBuilder.reflectionHashCode(this);
	}

}
